adjust footer and contact. set up placemetns for each section

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <!-- skills -->
         <div id="skills">
-            <div class="container row">
+            <div class="container-fluid row">
                 <ul id="devicons">
                     <li>
                         <i class="devicon-react-original-wordmark"></i>
@@ -163,7 +163,7 @@
                 </ul>
             </div>
 
-            <div class="container row">
+            <div class="container-fluid row">
                 <ul id="devicons">
                     <li>
                         <i class="devicon-html5-plain-wordmark"></i>
@@ -180,7 +180,7 @@
                 </ul>
             </div>
 
-            <div class="container row">
+            <div class="container-fluid row">
                 <ul id="devicons">
                     <li>
                         <i class="devicon-nodejs-plain-wordmark"></i>
@@ -212,15 +212,7 @@
 
         <br>
         <br>
-        <br>
-
-        <!-- contact -->
-        <div id="contact" class="container-fluid row">
-            <div class="card fluid">
-                <p>contact card test test</p>
-                <h6> Lets get in touch</h6>
-            </div>
-        </div>
+        <br>       
 
     </main>
 
@@ -230,10 +222,27 @@
 
 
 
-    <!-- footer -->
+    <!-- footer --> <!-- contact -->
     <footer>
-        <div class="footer navbar-light navbar-static-bottom shadow-sm p-3 bg-white text-muted">
-            <div class="row">
+        <div class="footer row navbar-light navbar-static-bottom shadow-sm p-3 bg-white text-muted text-left">
+            <div class="col">
+                <ul>
+                    <li>
+                        Created, Developed, Cried over by Dillon Reinwald 
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/dillrein/" target="_blank">Linkedin</a>                    </li>
+                    <li>
+                        <a href="https://github.com/dillrein" target="_blank">Github</a>                    </li>
+                </ul>
+            </div>
+            <div class="col-sm">
+                <button> Back to to button</button>
+            </div>
+
+            
+            
+            <!-- <div class="row">
                 <div class="col">
                     <p>Created, Developed, Cried over by Dillon Reinwald</p>
                 </div>
@@ -247,7 +256,7 @@
                         <a href="github" target="_blank">Github</a>
                     </p>
                 </div>
-            </div>
+            </div> -->
 
 
 
