--- a/index.html
+++ b/index.html
@@ -17,13 +17,31 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/modal.css">
 
 </head>
 
 <body>
-    <
-    <h1>Test</h1>
+    <navbar class="container-fluid">
+        <div class="side">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Project</a>
+            <a href="#">Skills</a>
+        </div>
+        <div id="Title" class="container">
+            <div class="row">
+                <div class="information col">
+                    <h2> Dillon Reinwald</h2>
+                    <h4> Full Stack Web Developer</h4>
+                    <h6> Test Test Test</h6>
+                </div>
+               
+                <img class="col-8" src="assets/images/forestMe.jpg">
+            </div>
+            
+        </div>
+
+    </navbar>
 
 
 
