landing page navbar buttons work:

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 </head>
 
 <body>
-    <navbar class="container-fluid">
+    <navbar class="container-fluid"><div class="form-group mb-2">
+        <label for="staticEmail2" class="sr-only">Email</label>
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="email@example.com">
+      </div>
         <div class="side">
             <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Project</a>
-            <a href="#">Skills</a>
+            <a href="./pages/aboutMe.html">About</a>
+            <a href="./pages/projects.html">Project</a>
+            <a href="./pages/skills.html">Skills</a>
         </div>
         <div id="Title" class="container">
             <div class="row">
