--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -16,14 +16,34 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-    
+    <link rel="stylesheet" href="../assets/css/style.css">
+
 
 </head>
 
 <body>
-    <h3>aboutMe</h3>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item ">
+                    <a class="nav-link" href="../index.html">Home </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="aboutMe.html">About Me <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./skills.html">Skills</a>
+                </li>
+            </ul>
+
+        </div>
+
+        <a class="navbar-brand float-right" href="#">Dillon Reinwald</a>
+    </nav>
 
 
 
