--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -22,8 +22,9 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-
+    <nav class="navbar fixed-top navbar-expand-lg bg-transparent">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
@@ -42,7 +43,7 @@
 
         </div>
 
-        <a class="navbar-brand float-right" href="#">Dillon Reinwald</a>
+        <span id="headerRight" class="float-right ">Dillon Reinwald</span>
     </nav>
 
 
