added more to aboutMe, adjusted some css, hamburger added

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -24,7 +24,9 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-transparent">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"></button>
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
@@ -45,6 +47,23 @@
 
         <span id="headerRight" class="float-right ">Dillon Reinwald</span>
     </nav>
+
+    <br>
+
+    <div class="">
+        test
+
+    </div>
+
+    <div class="card bg-dark text-white">
+        <img src="../assets/images/snowboard.jpg" class="card-img" alt="me">
+        <div class="card-img-overlay">
+          <h5 class="card-title">This is me!</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Last updated 3 mins ago</p>
+        </div>
+      </div>
+    
 
 
 
