going back to orignal design, with update new css/js additions

--- a/index.html
+++ b/index.html
@@ -20,25 +20,22 @@
 
 </head>
 
-<body id="landingPage">
-    <navbar  class="container-fluid">
-    
-        <div class="sideNav">
-            <a href="./index.html">Home</a>
-            <a href="./pages/aboutMe.html">About</a>
-            <a href="./pages/projects.html">Project</a>
-            <a href="./pages/skills.html">Skills</a>
-        </div>
-        <div id="Title" class="container">
-            <div class="row">
-                <div class="information col">
-                    <h2 class="infoText"> Dillon Reinwald</h2>
-                    <h4 class="infoText"> Full Stack Web Developer</h4>
-                    <h6 class="infoText"> Test Test Test</h6>
-                </div>
-            </div>
-            
-        </div>
+<body>
+    <navbar class="container-fluid">
+        <ul>
+            <li data-text="Home">
+                <a href="#"> Home </a>
+            </li>
+            <li data-text="About Me">
+                <a href="#"> About Me </a>
+            </li>
+            <li data-text="Projects">
+                <a href="#"> Projects </a>
+            </li>
+            <li data-text="Skills">
+                <a href="#"> Skills </a>
+            </li>
+        </ul>
 
     </navbar>
 
