--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <body>
 
-    <header>
-        <nav id="Navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+    <header id="Navbar"">
+        <nav  class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Dillon Reinwald</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
 
 
 
-
+    
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
