setting up footer. starting work on back to top button

--- a/index.html
+++ b/index.html
@@ -110,6 +110,39 @@
         <div class="card col"> Picture box </div>
     </div>
 
+    <br>
+    <br>
+    <br>
+
+    <footer class="container-fluid row sticky-bottom">
+        <div class="col-sm-6">
+            <ul>
+                <li>
+                    Dillon Reinwald
+                </li>
+                <li>
+                    Full Stack Web Developer
+                </li>
+                <li>
+                    test 3
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-6">
+            <ul>
+                <li>
+                    <a>Linkedin</a>
+                </li>
+                <li>
+                    <a>GitHub</a>
+                </li>
+                <li>
+                    <a>Resume</a>
+                </li>
+            </ul>
+        </div>
+
+    </footer>
 
 
 
