href to footers

--- a/index.html
+++ b/index.html
@@ -124,20 +124,23 @@
                     Full Stack Web Developer
                 </li>
                 <li>
-                    test 3
+                    Programmer(noun.) : A machine that turns coffee into code.
                 </li>
             </ul>
         </div>
         <div class="col-sm-6">
             <ul>
                 <li>
-                    <a>Linkedin</a>
+                    <a href="https://www.linkedin.com/in/dillrein/" target="blank">Linkedin</a>
                 </li>
                 <li>
-                    <a>GitHub</a>
+                    <a href="https://github.com/dillrein" target="blank">GitHub</a>
                 </li>
                 <li>
-                    <a>Resume</a>
+                    <a href="https://docs.google.com/document/d/e/2PACX-1vRfRDMwecf2iKSO9hrLH5JUSN544XFC9AjGHwDGZSH8bNChX7zOnZ3oBy6eKD4wSJhClQHEfpfX7ERz/pub"
+                        target="blank">
+                        Resume
+                    </a>
                 </li>
             </ul>
         </div>
