--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet"
         href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -105,15 +106,56 @@
     <br>
     <br>
 
-    <div id="Skills" class="row">
-        <div class="card col"> Text box </div>
-        <div class="card col"> Picture box </div>
+
+    <!-- skills -->
+    <div id="Skills" class="">
+        <div class="row"> 
+
+            <i class="devicon-html5-plain-wordmark"></i>
+
+            <i class="devicon-css3-plain-wordmark"></i>
+
+            <i class="devicon-javascript-plain"></i>
+
+            <i class="devicon-java-plain-wordmark"></i>
+
+            <i class="devicon-jquery-plain-wordmark"></i>
+
+            <i class="devicon-react-original-wordmark"></i>
+
+            <i class="devicon-bootstrap-plain-wordmark"></i>
+            
+
+        </div>
+        <div class="row"> 
+
+            <i class="devicon-nodejs-plain"></i>
+
+            <i class="devicon-express-original-wordmark"></i>
+
+            <i class="devicon-mongodb-plain-wordmark"></i>
+
+            <i class="devicon-mysql-plain-wordmark"></i>
+
+            <i class="devicon-heroku-original-wordmark"></i>
+
+            <i class="devicon-photoshop-line"></i>
+
+            <i class="devicon-illustrator-line"></i>
+
+            <i class="devicon-npm-original-wordmark"></i>
+
+            <i class="devicon-visualstudio-plain"></i>
+
+        </div>
     </div>
 
     <br>
     <br>
     <br>
 
+
+    <!-- footer -->
     <footer class="container-fluid row sticky-bottom">
         <div class="col-sm-6">
             <ul>
@@ -131,15 +173,22 @@
         <div class="col-sm-6">
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/dillrein/" target="blank">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/dillrein/" target="blank">
+                        Linkedin
+                        <i class="devicon-linkedin-plain"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="https://github.com/dillrein" target="blank">GitHub</a>
+                    <a href="https://github.com/dillrein" target="blank">
+                        GitHub
+                        <i class="devicon-github-plain"></i>
+                    </a>
                 </li>
                 <li>
                     <a href="https://docs.google.com/document/d/e/2PACX-1vRfRDMwecf2iKSO9hrLH5JUSN544XFC9AjGHwDGZSH8bNChX7zOnZ3oBy6eKD4wSJhClQHEfpfX7ERz/pub"
                         target="blank">
                         Resume
+                        <i class="far fa-file"></i>
                     </a>
                 </li>
             </ul>
