adjust footer css

--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
     <footer class="container-fluid row sticky-bottom">
         <div class="col-sm-6">
             <ul>
-                <li>
+                <li class="pointerEvent">
                     Dillon Reinwald
                 </li>
-                <li>
+                <li class="pointerEvent">
                     Full Stack Web Developer
                 </li>
-                <li>
+                <li class="pointerEvent">
                     Programmer(noun.) : A machine that turns coffee into code.
                 </li>
             </ul>
