adjusting icons, need to add tooltips

--- a/index.html
+++ b/index.html
@@ -109,43 +109,43 @@
 
     <!-- skills -->
     <div id="Skills" class="">
-        <div class="row"> 
+        <div class="row justify-content-center"> 
 
-            <i class="devicon-html5-plain-wordmark"></i>
+            <i class="icons devicon-html5-plain-wordmark"></i>
 
-            <i class="devicon-css3-plain-wordmark"></i>
+            <i class="icons devicon-css3-plain-wordmark"></i>
 
-            <i class="devicon-javascript-plain"></i>
+            <i class="icons devicon-javascript-plain"></i>
 
-            <i class="devicon-java-plain-wordmark"></i>
+            <i class="icons devicon-java-plain-wordmark"></i>
 
-            <i class="devicon-jquery-plain-wordmark"></i>
+            <i class="icons devicon-jquery-plain-wordmark"></i>
 
-            <i class="devicon-react-original-wordmark"></i>
+            <i class="icons devicon-react-original-wordmark"></i>
 
-            <i class="devicon-bootstrap-plain-wordmark"></i>
+            <i class="icons devicon-bootstrap-plain-wordmark"></i>
             
 
         </div>
-        <div class="row"> 
+        <div class="row justify-content-center"> 
 
-            <i class="devicon-nodejs-plain"></i>
+            <i class="icons devicon-nodejs-plain"></i>
 
-            <i class="devicon-express-original-wordmark"></i>
+            <i class="icons devicon-express-original-wordmark"></i>
 
-            <i class="devicon-mongodb-plain-wordmark"></i>
+            <i class="icons devicon-mongodb-plain-wordmark"></i>
 
-            <i class="devicon-mysql-plain-wordmark"></i>
+            <i class="icons devicon-mysql-plain-wordmark"></i>
 
-            <i class="devicon-heroku-original-wordmark"></i>
+            <i class="icons devicon-heroku-original-wordmark"></i>
 
-            <i class="devicon-photoshop-line"></i>
+            <i class="icons devicon-photoshop-line"></i>
 
-            <i class="devicon-illustrator-line"></i>
+            <i class="icons devicon-illustrator-line"></i>
 
-            <i class="devicon-npm-original-wordmark"></i>
+            <i class="icons devicon-npm-original-wordmark"></i>
 
-            <i class="devicon-visualstudio-plain"></i>
+            <i class="icons devicon-visualstudio-plain"></i>
 
         </div>
     </div>
