added back to top button. adjusted icons sizing and hover effects

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Reinwald Resume</title>
 
 
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet"
         href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="./assets/css/reset.css">
@@ -125,11 +125,10 @@
 
             <i class="icons devicon-bootstrap-plain-wordmark"></i>
             
+            <i class="icons devicon-nodejs-plain"></i>
 
         </div>
         <div class="row justify-content-center"> 
-
-            <i class="icons devicon-nodejs-plain"></i>
 
             <i class="icons devicon-express-original-wordmark"></i>
 
@@ -153,6 +152,10 @@
     <br>
     <br>
     <br>
+
+    <!-- back to top button -->
+
+    <a id="BackToTop"></a>
 
 
     <!-- footer -->
