update some projects css

--- a/index.html
+++ b/index.html
@@ -97,9 +97,35 @@
     <br>
     <br>
 
-    <div id="Projects" class="row">
-        <div class="card col"> Text box </div>
-        <div class="card col"> Picture box </div>
+    <!-- Projects -->
+    <div id="Projects" class="projectBox">
+        <div class="slideCard">
+            <div class="imageBox">
+                <img src="assets/images/family.jpg">
+            </div>
+            <div class="content">
+                <h2>Number Guess Game</h2>
+                <p>A simple game of numbers to add up to a random number.</p>
+            </div>
+        </div>
+        <div class="slideCard">
+            <div class="imageBox">
+                <img src="assets/images/photography.jpg">
+            </div>
+            <div class="content">
+                <h2>Myusic</h2>
+                <p>A web application for finding venues and there next shows</p>
+            </div>
+        </div>
+        <div class="slideCard">
+            <div class="imageBox">
+                <img src="assets/images/stump.JPG">
+            </div>
+            <div class="content">
+                <h2>Card three</h2>
+                <p>stuff stuff some more stuff stuff sutff</p>
+            </div>
+        </div>
     </div>
 
     <br>
@@ -109,7 +135,7 @@
 
     <!-- skills -->
     <div id="Skills" class="">
-        <div class="row justify-content-center"> 
+        <div class="row justify-content-center">
 
             <i class="icons devicon-html5-plain-wordmark"></i>
 
@@ -124,11 +150,11 @@
             <i class="icons devicon-react-original-wordmark"></i>
 
             <i class="icons devicon-bootstrap-plain-wordmark"></i>
-            
+
             <i class="icons devicon-nodejs-plain"></i>
 
         </div>
-        <div class="row justify-content-center"> 
+        <div class="row justify-content-center">
 
             <i class="icons devicon-express-original-wordmark"></i>
 
