--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- navbar (after scroll down) -->
-    <header id="Navbar"">
+    <header id="Navbar">
         <nav  class=" navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#LandingNav">Dillon Reinwald</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
