commiting to set up new branch correctly

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         </div>
         <div id="AboutMeInfo" class="row justify-content-center">
             <div class="col-sm-4 ">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos dicta debitis numquam beatae
-                cumque dignissimos optio eius totam! Quod necessitat
+                Im not sure what to write here but Hi.
+                Stuff about me and what I am about. blah blah blah
             </div>
             <div class="col-sm-4 ">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos dicta debitis numquam beatae
