working on adjustments in css and actual text

--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
 <body>
     <!-- navbar (after scroll down) -->
     <header id="Navbar">
-        <nav  class=" navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#LandingNav">Dillon Reinwald</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <span class="navbar-text">
-            Full Stack Web Developer
-        </span>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#AboutMe">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Projects">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Resume">Resume</a>
-                </li>
-            </ul>
-        </div>
+        <nav class=" navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#LandingNav">Dillon Reinwald</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <span class="navbar-text">
+                Full Stack Web Developer
+            </span>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#AboutMe">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Resume">Resume</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -81,13 +81,20 @@
             <div class="text">Dillon Reinwald</div>
         </div>
         <div id="AboutMeInfo" class="row justify-content-center">
-            <div class="col-sm-4 ">
-                Im not sure what to write here but Hi.
-                Stuff about me and what I am about. blah blah blah
+            <div class="AboutMeInfoText col-sm-4 ">
+                Full Stack Web developer looking for new employment opportunites. I recieved a certification for Full
+                Stack Web Developent from the University of California, Irvine. Although I am comfortable with Full
+                Stack, I tend to focus more on Front-end, as well as UX/ UI. My go to language right now is JavaScript,
+                with its respective libraries and techonlogies. I have mainly focusing on using React.js (as well React
+                native) and Bootstrap and sharpening my skills with those. I have always been taking self pace classes
+                to learn Python and also JavaScript, to better my skills and give myself more utility.
             </div>
-            <div class="col-sm-4 ">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos dicta debitis numquam beatae
-                cumque dignissimos optio eius totam! Quod necessitat
+            <div class="AboutMeInfoText col-sm-4 ">
+                I find myself to be a strong independet worker, but never shy from team collaboration. I believe that
+                any strong projects plays to the strengths of each individul member but relies on the team comming
+                together to overcome weakness and large obstacles. I strive to have my code be minimal and efficient.
+                Producing high quality code thats is easily readable by others is important standard in coding for me.
+
             </div>
         </div>
     </div>
@@ -131,6 +138,10 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
+
 
 
     <!-- skills -->
@@ -174,11 +185,6 @@
 
         </div>
     </div>
-
-    <br>
-    <br>
-    <br>
-
     <!-- back to top button -->
 
     <a id="BackToTop"></a>
