added images for projects

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div id="Projects" class="projectBox">
         <div class="slideCard">
             <div class="imageBox">
-                <img src="assets/images/family.jpg">
+                <img src="assets/images/BrewHaHa.JPG">
             </div>
             <div class="content">
                 <h2>Number Guess Game</h2>
@@ -117,16 +117,16 @@
         </div>
         <div class="slideCard">
             <div class="imageBox">
-                <img src="assets/images/photography.jpg">
+                <img src="assets/images/MusicApp.JPG">
             </div>
             <div class="content">
-                <h2>Myusic</h2>
+                <h2>Myoozik</h2>
                 <p>A web application for finding venues and there next shows</p>
             </div>
         </div>
         <div class="slideCard">
             <div class="imageBox">
-                <img src="assets/images/stump.JPG">
+                <img src="assets/images/bamzonStuff.png">
             </div>
             <div class="content">
                 <h2>Card three</h2>
